WEB-860 fixed inputs badges and spacing

--- a/src/app/shared/preview/components/preview-header/preview-header.component.scss
+++ b/src/app/shared/preview/components/preview-header/preview-header.component.scss
@@ -17,6 +17,14 @@
 	}
 }
 
+.top-section {
+	.left {
+		icon-app {
+			margin-right: var(--spacing-s);
+		}
+	}
+}
+
 editable-text-app {
 	width: auto;
 }
