--- a/src/app/shared/preview/components/preview-section/preview-section.component.scss
+++ b/src/app/shared/preview/components/preview-section/preview-section.component.scss
@@ -8,9 +8,6 @@
 	.deep-class {
 		padding-top: var(--spacing-ms);
 	}
-	divider-app {
-		margin-top: var(--spacing-ms);
-	}
 }
 
 h2 {
